[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0", default_features = false, features = ["std"] }
env_logger = "0.10"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
clap = "4.4"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
hex = "0.4.3"