[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.19.1" }
anyhow = "1.0"
clap = "4.4"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
serde = "1.0"

[build-dependencies]
risc0-build = { version = "0.19.1" }

[package.metadata.risc0]
methods = ["guest"]

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
profiler = ["risc0-zkvm/profiler"]